RESOLVED FIXED275474
Sec-Fetch-Destination is invalid for service worker intercepted loads
https://bugs.webkit.org/show_bug.cgi?id=275474
Summary Sec-Fetch-Destination is invalid for service worker intercepted loads
youenn fablet
Reported 2024-06-14 01:40:16 PDT
Sec-Fetch-Destination is invalid for service worker intercepted loads
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-14 01:40:39 PDT
youenn fablet
Comment 2 2024-06-14 02:30:36 PDT
EWS
Comment 3 2024-06-17 09:06:19 PDT
Committed 280070@main (f55a27a7a6fa): <https://commits.webkit.org/280070@main> Reviewed commits have been landed. Closing PR #29813 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.